SERVER-11104 make sure orphaned data command uses valid shard key